--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "pinia": "^2.0.21",
     "vue": "^3.2.37",
+    "vue-page-title": "^2.0.5",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
